[tool.poetry]
name = "melody-mind"
version = "0.1.0"
description = ""
authors = ["faa-99 <farahakoum1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.21.0"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"

[tool.poetry.dev-dependencies]
mypy = "0.942"
black = "22.3.0"
isort = "5.10.1"
flake8 = "4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
